<resources>
    <string name="app_name">MRCO</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!--(판매자)상품 문의내역 정렬 방식-->
    <string-array name="array_qnalist_sort">
        <item>최신 문의 순</item>
        <item>오래된 문의 순</item>
    </string-array>

    <!--고객센터 문의 유형-->
    <string-array name="array_customerinquiry_type">
        <item>회원 문의</item>
        <item>배송 문의</item>
        <item>교환/반품/취소 문의</item>
        <item>환불 문의</item>
        <item>기타 문의</item>
    </string-array>

    <!--상품페이지 리뷰 정렬 방식-->
    <string-array name="array_product_review_sort">
        <item>최신 리뷰 순</item>
        <item>평점 높은 순</item>
        <item>평점 낮은 순</item>
    </string-array>

    <!--고객센터 문의 답변 방식-->
    <string-array name="array_customerinquiry_answer">
        <item>이메일 답변</item>
        <item>문자 답변</item>
    </string-array>

    <!--상품페이지 상품구매 옵션_사이즈 정렬-->
    <string-array name="array_product_purchase_size_sort">
        <item>사이즈 선택</item>
        <item>@string/product_size</item>
        <item>@string/product_size</item>
        <item>@string/product_size</item>
    </string-array>

    <!--상품페이지 상품구매 옵션_색상 정렬-->
    <string-array name="array_product_purchase_color_sort">
        <item>색상 선택</item>
        <item>@string/product_color</item>
        <item>@string/product_color</item>
        <item>@string/product_color</item>
    </string-array>

    <string name="LoremIpsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>

    <!-- 시각장애인들을 위한 contentDescription 설명 추가 -->
    <string name="contentDescription_codiImage">이 사진은 당신이 보고있는 코디상품의 전체적인 이미지입니다.</string>
    <string name="contentDescription_menuIcon">이 아이콘은 기간을 설정하는 아이콘입니다.</string>

    <!-- Button text -->
    <string name="button_review_approve">승인</string>
    <string name="buttonText_editButton">수정</string>

    <!--  탭 이름 -->
    <string name="tab_item_all">전체</string>
    <string name="tab_item_top">상의</string>
    <string name="tab_item_bottom">하의</string>
    <string name="tab_item_shoes">신발</string>
    <string name="tab_item_accessory">악세서리</string>

    <string name="tabItem_periodAll">전체</string>
    <string name="tabItem_periodOneYear">최근1년</string>

    <!-- 코디 상품 이름 -->
    <string name="codi_product_name">호불호 없는 출근룩 코디 SET</string>

    <!--  코디 상품 상세정보 입력항목  -->
    <string name="input_product_name">상품명 : </string>
    <string name="input_size">사이즈</string>
    <string name="input_color">색상</string>
    <string name="input_serial_number">상품 S/N</string>
    <string name="input_price">가격</string>

    <!--  코디 상품 상세 종류 입력  -->
    <string name="product_tag1">상의1</string>
    <string name="product_name">스탠다드 셔츠</string>
    <string name="product_color">WHITE</string>
    <string name="product_product_serial_numper">esd1234567</string>
    <string name="product_price">₩ 70,000</string>
    <string name="product_size">M</string>

    <!--  상품 관리 Fragment  -->
    <string name="title_prodcutManagement">등록상품관리</string>
    <string name="tabItem_codiProductManagement">코디상품관리</string>
    <string name="tabItem_individualProductManagement">개별상품관리</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  상품관리 리스트  -->
    <string name="textView_cardView_productName">상품명</string>
    <string name="textView_cardView_productSerialNumber">상품 S/N</string>
    <string name="textView_cardView_productStock"> 재고 : 36개 </string>

    <!-- 개별 상품 상세 -->
    <string name="textView_individualProductInfo_productName">상품명</string>
    <string name="textView_individualProductInfo_productSerialNumebr">상품 S/N : esdf1234567</string>
    <string name="textView_individualProductInfo_productStockNumber">잔여 재고수량 : 350개</string>

    <!-- Review Fragment -->
    <string name="textView_reviewCreate_reviewInfo">후기작성 안내</string>
    <string name="textView_createdReview_reviewInfo">후기작성 안내</string>
    <string name="tabItem_myReview_reviewCreate">리뷰 작성</string>
    <string name="tabItem_myReview_createdReview">작성한 리뷰</string>
    <string name="textView_reviewCreate_purchaseDate">구매일자 / 구매확정 여부</string>
    <string name="textView_reviewCreate_productPrice">₩ 100,000</string>
    <string name="textView_reviewCreate_productType">스타일링 / MBTI</string>
    <string name="textView_reviewCreate_productName">코디 이름</string>

</resources>