<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".product.detail_Info.ProductInfoFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_product_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <com.google.android.material.tabs.TabLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_prouct_info_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_all" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_prouct_info_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_top" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_prouct_info_bottoms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_bottom" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_prouct_info_shoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_shoes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/tabItem_prouct_info_accessory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tab_item_accessory" />
    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/fragmeLayout_product_info_tabFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"/>

</LinearLayout>